# Butterscotch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: collision.h  data_win.c  data_win.h  event_table.h  gml_array.c  gml_array.h  ini.c  instance.c  instance.h  real_type.h  renderer.h  runner.c  runner.h  rvalue.h  spatial_grid.c  spatial_grid.h  text_utils.h  utils.h  vm.c  vm.h  vm_builtins.c  vm_builtins.h
src/gl/: gl_renderer.c  gl_renderer.h
src/glfw/: gl_legacy_renderer.c  gl_legacy_renderer.h  gl_renderer.c  gl_renderer.h  glfw_file_system.c  ma_audio_system.c  main.c  stb_impl.c
src/ps2/: gs_renderer.c  gs_renderer.h  gs_renderer_flat.c  main.c
